<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ecs160.packmanager.ui.SignUpActivity">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Name"
        android:ems="10"
        android:id="@+id/sign_up_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/username"
        android:ems="10"
        android:id="@+id/sign_up_username"
        android:layout_below="@+id/sign_up_name"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_alignEnd="@+id/sign_up_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password"
        android:id="@+id/sign_up_password"
        android:layout_below="@+id/sign_up_username"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_alignEnd="@+id/sign_up_username" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:ems="10"
        android:id="@+id/sign_up_confirm_password"
        android:layout_below="@+id/sign_up_password"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_alignEnd="@+id/sign_up_password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/sign_up_phone"
        android:hint="@string/phone_number"
        android:layout_below="@+id/sign_up_confirm_password"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_alignEnd="@+id/sign_up_confirm_password" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:id="@+id/sign_up_done_button"
        android:layout_below="@+id/sign_up_phone"
        android:backgroundTint="@color/colorAccent"
        android:textColor="#FFFFFF"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
